--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "lodash": "^4.17.15",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-bouncy-checkbox": "0.0.5",
+    "react-native-dynamic-vector-icons": "^0.2.2",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.2.0",
     "react-native-tab-view": "^2.13.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
