--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "firebase": "^7.9.3",
+    "formik": "^2.1.4",
     "lodash": "^4.17.15",
     "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.61.5",
+    "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.2.0",
