--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "phoenix-channels": "^1.0.0",
+    "querystring": "^0.2.0",
     "react": "16.9.0",
     "react-native": "^0.61.5",
     "react-native-bouncy-checkbox": "0.0.5",
@@ -23,6 +26,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-paper": "^3.6.0",
     "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.0",
