--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
+    "eslint-plugin-react": "^7.19.0",
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
     "js-sha256": "^0.9.0",
