--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^2.0.9",
+    "android": "^0.0.8",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "emoji-utils": "^1.0.1",
@@ -30,6 +32,7 @@
     "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gifted-chat": "^0.13.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.6.0",
     "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.0",
