--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-paper": "^3.6.0",
     "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.0",
